--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -4,7 +4,7 @@ services:
     networks:
       - FptBook
     environment:
-      base_URL: "http://FptBookStore.slimair.cool"
+      base_URL: "FptBook:80"
     image: katalonstudio/katalon
     command: katalonc.sh -projectPath=/tmp/project/ -browserType="Firefox" -retry=0 -statusDelay=15 -testSuitePath="Test Suites/FptBook_TestSuite" -apiKey=ba490008-3999-4890-848b-b43048e5ca92 --config -webui.autoUpdateDrivers=true
     volumes: 
